Fixes layout issues

--- a/css/help.css
+++ b/css/help.css
@@ -172,6 +172,9 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
   color: #397E20;
+  right: 0;
+  position: absolute; 
+  top: -10px; 
 }
 
 /* // Swing, credits to : https://www.webdesignerdepot.com/ // */
